--- a/style.css
+++ b/style.css
@@ -800,6 +800,115 @@ main {
   width: 50px;
 }
 
+.testimonials {
+  background: #E6F6EA;
+  box-shadow: inset 77.4px -77.4px 77.4px rgba(175, 187, 178, 0.099), inset -77.4px 77.4px 77.4px rgba(255, 255, 255, 0.099);
+  -webkit-backdrop-filter: blur(36.378px);
+          backdrop-filter: blur(36.378px);
+}
+
+.testimonials-content {
+  padding-top: 50px;
+  font-family: "Nunito";
+  font-style: normal;
+}
+.testimonials-content .top-content {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-bottom: 40px;
+}
+.testimonials-content .top-content h2 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  color: #000000;
+}
+.testimonials-content .top-content h2 span {
+  color: #00730C;
+}
+.testimonials-content .top-content p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  color: #676767;
+}
+.testimonials-content .slider-wrapper {
+  margin-top: -99px;
+  position: relative;
+  top: 99px;
+}
+.testimonials-content .slider-wrapper .slide {
+  background: #fff;
+  width: 100%;
+  padding: 20px;
+  box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+}
+.testimonials-content .slider-wrapper .slide .img-wrapper {
+  position: relative;
+  margin-bottom: 30px;
+  display: block;
+}
+.testimonials-content .slider-wrapper .slide .img-wrapper .img {
+  position: relative;
+  z-index: 1;
+}
+.testimonials-content .slider-wrapper .slide .img-wrapper .img img {
+  position: relative;
+  z-index: 1;
+}
+.testimonials-content .slider-wrapper .slide .img-wrapper .img .background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  width: 135px;
+  height: 127px;
+  background: linear-gradient(6.68deg, #00730C 4.95%, rgba(251, 246, 238, 0) 264.79%);
+  border-radius: 30px;
+}
+.testimonials-content .slider-wrapper .slide .text {
+  padding-top: 14px;
+  background: url(img/testimonials-item-bg.svg) no-repeat;
+}
+.testimonials-content .slider-wrapper .slide .text p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #676767;
+  margin-bottom: 15px;
+}
+.testimonials-content .slider-wrapper .slide .text > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.testimonials-content .slider-wrapper .slide .text > div .client-name {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  text-transform: capitalize;
+  color: #212529;
+}
+.testimonials-content .slider-wrapper .slide .text > div .client-name span {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #676767;
+}
+.testimonials-content .slider-wrapper .slide .text > div .stars {
+  display: flex;
+  gap: 7px;
+}
+.testimonials-content .slider-wrapper .slide .text > div .stars div {
+  width: 17px;
+  height: 17px;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+          clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  background: #00730C;
+}
+
 @media (min-width: 640px) {
   .container {
     max-width: 610px;
@@ -1077,6 +1186,36 @@ main {
     font-size: 15px;
     line-height: 15px;
   }
+  .testimonials-content {
+    padding-top: 100px;
+  }
+  .testimonials-content .top-content {
+    margin-bottom: 50px;
+  }
+  .testimonials-content .top-content p {
+    text-align: left;
+    padding-right: 200px;
+  }
+  .testimonials-content .slider-wrapper {
+    margin-top: -57px;
+    top: 57px;
+  }
+  .testimonials-content .slider-wrapper .slide {
+    display: flex;
+    width: 50%;
+    padding: 32px 25px;
+    flex-direction: row;
+    gap: 20px;
+  }
+  .testimonials-content .slider-wrapper .slide .text {
+    margin-top: 6px;
+    padding-top: 25px;
+    background: url(img/testimonials-item-bg-l.svg) no-repeat;
+  }
+  .testimonials-content .slider-wrapper .slide .img-wrapper .img .background {
+    width: 193px;
+    height: 181px;
+  }
 }
 @media (min-width: 1200px) {
   .container {
@@ -1247,5 +1386,30 @@ main {
   .staff-content .slider-wrapper .slider-line .slide .translate h4 span {
     font-size: 18px;
     line-height: 30px;
+  }
+  .testimonials-content .top-content h2 {
+    font-weight: 800;
+    font-size: 45px;
+    line-height: 61px;
+  }
+  .testimonials-content .top-content p {
+    padding-right: 400px;
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .testimonials-content .slider-wrapper .slide {
+    gap: 30px;
+  }
+  .testimonials-content .slider-wrapper .slide .text p {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .testimonials-content .slider-wrapper .slide .text > div .client-name {
+    font-size: 24px;
+    line-height: 33px;
+  }
+  .testimonials-content .slider-wrapper .slide .text > div .client-name span {
+    font-size: 14px;
+    line-height: 25px;
   }
 }/*# sourceMappingURL=style.css.map */
