--- a/style.scss
+++ b/style.scss
@@ -813,9 +813,124 @@ border-radius: 8px;
 
 
 
-.pagination {
+.testimonials {
+  background: #E6F6EA;
+  box-shadow: inset 77.4px -77.4px 77.4px rgba(175, 187, 178, 0.099), inset -77.4px 77.4px 77.4px rgba(255, 255, 255, 0.099);
+  backdrop-filter: blur(36.378px);
 }
 
+.testimonials-content {
+  padding-top: 50px;
+  font-family: 'Nunito';
+font-style: normal;
+  .top-content {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 40px;
+  h2 {
+    font-weight: 700;
+font-size: 28px;
+line-height: 38px;
+color: #000000;
+span {
+  color: $main-color-light-green;
+}
+  }
+  p {
+    font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+text-align: center;
+color: #676767;
+  }
+  }
+  .slider-wrapper {
+    margin-top: -99px;
+    position: relative;
+    top: 99px;
+    .slide {
+      background: #fff;
+      width: 100%;
+      padding: 20px;
+      box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+      .img-wrapper {
+        position: relative;
+        margin-bottom: 30px;
+        display: block;
+        .img {
+          position: relative;
+          z-index: 1;
+          img {
+            position: relative;
+            z-index: 1;
+          }
+          .background {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            // transform: translateX(-50%);
+            z-index: 0;
+            width: 135px;
+            height: 127px;
+            background: linear-gradient(6.68deg, #00730C 4.95%, rgba(251, 246, 238, 0) 264.79%);
+  border-radius: 30px;
+          }
+        }
+        
+      }
+      .text {
+        padding-top: 14px;
+        background: url(img/testimonials-item-bg.svg) no-repeat ;
+        p {
+          font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+color: #676767;
+margin-bottom: 15px;
+        }
+        >div {
+display: flex;
+align-items: center;
+justify-content: space-between;
+          .client-name {
+            font-weight: 700;
+font-size: 16px;
+line-height: 22px;
+text-transform: capitalize;
+color: #212529;
+span {
+  font-weight: 400;
+font-size: 12px;
+line-height: 16px;
+color: #676767;
+
+}
+          }
+          .stars {
+            display: flex;
+            gap: 7px;
+            div {
+              width: 17px;
+              height: 17px;
+              clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+              background: $main-color-light-green;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+
+
+.client-name {
+}
+.stars {
+}
 
 @media (min-width: 640px) {
   .container {
@@ -1148,7 +1263,40 @@ line-height: 23px;
 }
 }
 
-
+.testimonials-content {
+  padding-top: 100px;
+.top-content {
+  margin-bottom: 50px;
+p {
+  text-align: left;
+  padding-right: 200px;
+}
+}
+.slider-wrapper {
+  margin-top: -57px;
+  top: 57px;
+  .slide {
+    display: flex;
+    width: 50%;
+    padding: 32px 25px;
+    flex-direction: row;
+    gap: 20px;
+    .text {
+      margin-top: 6px;
+      padding-top: 25px;
+      background: url(img/testimonials-item-bg-l.svg) no-repeat;
+    }
+    .img-wrapper {
+      .img {
+        .background {
+          width: 193px;
+          height: 181px;
+        }
+      }
+    }
+  }
+}
+}
 }
 
 
@@ -1407,5 +1555,41 @@ line-height: 30px;
       }
     }
   }
+  }
+
+  .testimonials-content {
+    .top-content {
+      h2 {
+        font-weight: 800;
+font-size: 45px;
+line-height: 61px;
+      }
+      p {
+        padding-right: 400px;
+        font-size: 18px;
+line-height: 30px;
+      }
+    }
+    .slider-wrapper {
+      .slide {
+        gap: 30px;
+        .text {
+          p {
+            font-size: 18px;
+line-height: 30px;
+          }
+          >div {
+            .client-name {
+              font-size: 24px;
+line-height: 33px;
+span {
+  font-size: 14px;
+line-height: 25px;
+}
+            }
+          }
+        }
+      }
+    }
   }
 }
