--- a/style.css
+++ b/style.css
@@ -801,6 +801,7 @@ main {
 }
 
 .testimonials {
+  margin-bottom: 150px;
   background: #E6F6EA;
   box-shadow: inset 77.4px -77.4px 77.4px rgba(175, 187, 178, 0.099), inset -77.4px 77.4px 77.4px rgba(255, 255, 255, 0.099);
   -webkit-backdrop-filter: blur(36.378px);
@@ -816,7 +817,6 @@ main {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  margin-bottom: 40px;
 }
 .testimonials-content .top-content h2 {
   font-weight: 700;
@@ -834,10 +834,47 @@ main {
   text-align: center;
   color: #676767;
 }
+.testimonials-content .top-content > div {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.testimonials-content .top-content > div .testimonials-swiper-navigation {
+  align-self: center;
+  display: flex;
+  position: relative;
+  gap: 40px;
+}
+.testimonials-content .top-content > div .testimonials-swiper-navigation .swiper-button-next:after, .testimonials-content .top-content > div .testimonials-swiper-navigation .swiper-button-prev:after {
+  font-size: 15px;
+  border: 1px solid #00730C;
+  border-radius: 5px;
+  padding: 7px 12px;
+  background-color: #00730C;
+}
+.testimonials-content .top-content > div .testimonials-swiper-navigation .swiper-button-next, .testimonials-content .top-content > div .testimonials-swiper-navigation .swiper-button-prev {
+  position: relative;
+  color: white;
+}
+.testimonials-content .top-content > div .testimonials-swiper-navigation .swiper-button-prev.swiper-button-disabled {
+  opacity: 1;
+}
+.testimonials-content .top-content > div .testimonials-swiper-navigation .swiper-button-prev.swiper-button-disabled:after {
+  color: #00730C;
+  background: transparent;
+}
+.testimonials-content .top-content > div .testimonials-swiper-navigation .swiper-button-next.swiper-button-disabled {
+  opacity: 1;
+}
+.testimonials-content .top-content > div .testimonials-swiper-navigation .swiper-button-next.swiper-button-disabled:after {
+  color: #00730C;
+  background: transparent;
+}
 .testimonials-content .slider-wrapper {
   margin-top: -99px;
   position: relative;
   top: 99px;
+  box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
 }
 .testimonials-content .slider-wrapper .slide {
   background: #fff;
@@ -907,6 +944,88 @@ main {
   -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
           clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   background: #00730C;
+}
+
+.faq-content {
+  font-family: "Nunito";
+  font-style: normal;
+  text-align: center;
+}
+.faq-content h2 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  margin-bottom: 15px;
+  color: #212529;
+}
+.faq-content h2 span {
+  color: #00730C;
+}
+.faq-content p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #676767;
+}
+.faq-content .accordeon-wrapper {
+  margin-top: 40px;
+}
+.faq-content .accordeon-wrapper ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.faq-content .accordeon-wrapper .clicked {
+  display: block;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background: #FFF8F1;
+  border-radius: 3px;
+  padding: 12px 16px;
+}
+.faq-content .accordeon-wrapper .clicked .open-close {
+  display: block;
+  position: relative;
+}
+.faq-content .accordeon-wrapper .clicked .open-close::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 5px;
+  width: 2px;
+  height: 10px;
+  transform: rotate(0deg);
+  background: #000;
+}
+.faq-content .accordeon-wrapper .clicked .open-close::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 5px;
+  width: 2px;
+  height: 10px;
+  transform: rotate(90deg);
+  background: #000;
+}
+.faq-content .accordeon-wrapper .clicked.active {
+  background: #00730C;
+  color: white;
+}
+.faq-content .accordeon-wrapper .clicked.active .open-close::before {
+  width: 0;
+}
+.faq-content .accordeon-wrapper .clicked.active .open-close::after {
+  background: white;
+}
+.faq-content .accordeon-wrapper .clicked.active + p {
+  margin-top: 20px;
+}
+.faq-content .accordeon-wrapper p {
+  text-align: left;
+  max-height: 0;
+  overflow: hidden;
+  transition: all ease 0.5s;
 }
 
 @media (min-width: 640px) {
@@ -1196,9 +1315,28 @@ main {
     text-align: left;
     padding-right: 200px;
   }
+  .testimonials-content .top-content div {
+    flex-direction: row;
+    align-items: flex-end;
+  }
+  .testimonials-content .top-content div .testimonials-swiper-navigation {
+    gap: 60px;
+  }
+  .testimonials-content .top-content div .testimonials-swiper-navigation .swiper-button-prev, .testimonials-content .top-content div .testimonials-swiper-navigation .swiper-button-next {
+    height: auto;
+  }
+  .testimonials-content .top-content div .testimonials-swiper-navigation .swiper-button-prev::after, .testimonials-content .top-content div .testimonials-swiper-navigation .swiper-button-next:after {
+    position: absolute;
+    top: -15px;
+    font-size: 20px;
+    padding: 10px 15px;
+  }
   .testimonials-content .slider-wrapper {
     margin-top: -57px;
     top: 57px;
+  }
+  .testimonials-content .slider-wrapper .slider-line {
+    gap: 0;
   }
   .testimonials-content .slider-wrapper .slide {
     display: flex;
@@ -1215,6 +1353,22 @@ main {
   .testimonials-content .slider-wrapper .slide .img-wrapper .img .background {
     width: 193px;
     height: 181px;
+  }
+  .faq-content {
+    background: url(img/FAQ-img.png) no-repeat right;
+    padding-bottom: 100px;
+    background-size: 340px;
+    padding-right: 350px;
+  }
+  .faq-content h2 {
+    text-align: left;
+  }
+  .faq-content h2 br {
+    display: none;
+  }
+  .faq-content > p {
+    text-align: left;
+    padding-right: 0px;
   }
 }
 @media (min-width: 1200px) {
@@ -1411,5 +1565,27 @@ main {
   .testimonials-content .slider-wrapper .slide .text > div .client-name span {
     font-size: 14px;
     line-height: 25px;
+  }
+  .faq-content {
+    padding-right: 600px;
+    background-size: unset;
+  }
+  .faq-content h2 {
+    font-size: 45px;
+    line-height: 61px;
+  }
+  .faq-content p {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .faq-content .accordeon-wrapper .clicked {
+    padding: 15px 30px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+  }
+  .faq-content .accordeon-wrapper .clicked .open-close::before, .faq-content .accordeon-wrapper .clicked .open-close::after {
+    width: 3px;
+    height: 15px;
   }
 }/*# sourceMappingURL=style.css.map */
