--- a/style.scss
+++ b/style.scss
@@ -814,6 +814,7 @@ border-radius: 8px;
 
 
 .testimonials {
+  margin-bottom: 150px;
   background: #E6F6EA;
   box-shadow: inset 77.4px -77.4px 77.4px rgba(175, 187, 178, 0.099), inset -77.4px 77.4px 77.4px rgba(255, 255, 255, 0.099);
   backdrop-filter: blur(36.378px);
@@ -827,7 +828,6 @@ font-style: normal;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin-bottom: 40px;
   h2 {
     font-weight: 700;
 font-size: 28px;
@@ -844,11 +844,52 @@ line-height: 22px;
 text-align: center;
 color: #676767;
   }
+  >div {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    .testimonials-swiper-navigation {
+align-self: center;
+display: flex;
+position: relative;
+gap: 40px;
+.swiper-button-next:after, .swiper-button-prev:after {
+  font-size: 15px;
+  border: 1px solid #00730C;
+border-radius: 5px;
+padding: 7px 12px;
+background-color: #00730C;
+}  
+.swiper-button-next, .swiper-button-prev {
+  position: relative;
+  color: white;
+}
+.swiper-button-prev {
+  &.swiper-button-disabled {
+    opacity: 1;
+    &:after {
+      color: #00730C;
+      background: transparent;
+    }
+  }
+}
+.swiper-button-next {
+  &.swiper-button-disabled {
+    opacity: 1;
+    &:after {
+      color: #00730C;
+      background: transparent;
+    }
+  }
+}
+    }
+  }
   }
   .slider-wrapper {
     margin-top: -99px;
     position: relative;
     top: 99px;
+    box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
     .slide {
       background: #fff;
       width: 100%;
@@ -926,12 +967,99 @@ color: #676767;
 
 
 
-
-.client-name {
+.faq-content {
+  font-family: 'Nunito';
+  font-style: normal;
+  text-align: center;
+  h2 {
+font-weight: 700;
+font-size: 28px;
+line-height: 38px;
+margin-bottom: 15px;
+color: #212529;
+span {
+  color: $main-color-light-green
 }
-.stars {
+  }
+p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #676767;
+ 
+}
+.accordeon-wrapper {
+  margin-top: 40px;
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+}
+  .clicked {
+    display: block;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background: #FFF8F1;
+border-radius: 3px;
+    padding: 12px 16px;
+    .open-close {
+      display: block;
+      position: relative;
+    }
+    .open-close::before {
+content: '';
+display: block;
+position: absolute;
+top: 5px;
+width: 2px;
+height: 10px;
+transform: rotate(0deg);
+background: #000;
+    }
+    .open-close::after {
+      display: block;
+content: '';
+position: absolute;
+top: 5px;
+width: 2px;
+height: 10px;
+transform: rotate(90deg);
+background: #000;
+    }
+  }
+  .clicked.active {
+    background: $main-color-light-green;
+    color: white;
+    .open-close::before {
+      width: 0;
+   
+  }
+    .open-close::after {
+      background: white;
+   
+  }
+
+  +p {
+    margin-top: 20px;
+  }
+
+  
+}
+  p {
+
+    text-align: left;
+    max-height: 0;
+    overflow: hidden;
+    transition: all ease 0.5s;
+  }
+}
 }
 
+
+.open-close {
+}
 @media (min-width: 640px) {
   .container {
     max-width: 610px;
@@ -1271,8 +1399,27 @@ p {
   text-align: left;
   padding-right: 200px;
 }
+div {
+flex-direction: row;
+align-items: flex-end;
+.testimonials-swiper-navigation {
+  gap: 60px;
+  .swiper-button-prev, .swiper-button-next {
+    height: auto;
+  }
+  .swiper-button-prev::after, .swiper-button-next:after {
+    position: absolute;
+    top: -15px;
+    font-size: 20px;
+    padding: 10px 15px;
+  }
+}
+}
 }
 .slider-wrapper {
+  .slider-line {
+    gap: 0;
+  }
   margin-top: -57px;
   top: 57px;
   .slide {
@@ -1296,6 +1443,24 @@ p {
     }
   }
 }
+}
+
+
+.faq-content {
+  background: url(img/FAQ-img.png) no-repeat right;
+  padding-bottom: 100px;
+  background-size: 340px;
+  padding-right: 350px;
+  h2 {
+    text-align: left;
+    br {
+      display: none;
+    }
+  }
+  >p {
+    text-align: left;
+    padding-right: 00px;
+  }
 }
 }
 
@@ -1591,5 +1756,33 @@ line-height: 25px;
         }
       }
     }
+  }
+
+
+  .faq-content {
+    padding-right: 600px;
+    background-size: unset;
+  h2 {
+    font-size: 45px;
+line-height: 61px;
+  }
+  p {
+    font-size: 18px;
+line-height: 30px;
+  }
+  .accordeon-wrapper {
+    .clicked {
+      padding: 15px 30px;
+      font-weight: 700;
+      font-size: 24px;
+line-height: 33px;
+
+  .open-close::before,.open-close::after {
+    width: 3px;
+    height: 15px;
+  
+}
+    }
+  }
   }
 }
